Comando para sair do programa ou escolher outro hotel